Closed
Bug 107911
Opened 24 years ago
Closed 21 years ago
Browser won't open if browser.frames.enabled is set to false - Error launching browser window:no XBL binding for browser
Categories
(Core Graveyard :: Embedding: APIs, defect)
Core Graveyard
Embedding: APIs
Tracking
(Not tracked)
RESOLVED
FIXED
Future
People
(Reporter: bugzilla-mozilla-20220926, Assigned: harishd)
References
Details
Attachments
(1 file, 1 obsolete file)
|
1.68 KB,
patch
|
Details | Diff | Splinter Review |
Looking through all.js, I found the intriguing preference
|browser.frames.enabled|. Hoping this would enable a frame-free profile (the
pref was added for embedding), I turned it on. After selecting the profile,
though, I got a dialog "Error launching browser window:no XBL binding for
browser", and the browser exited.
This would be really useful for testing pages for browser
compatibility/accessibility, but it's obviously not a high priority.
Linux trunk nightly -sea 2001102910.
see bug 69455
Assignee: asa → harishd
Component: Browser-General → Embedding: APIs
QA Contact: doronr → depstein
This bug has been marked "future" because the original netscape engineer working
on this is over-burdened. If you feel this is an error, that you or another
known resource will be working on this bug,or if it blocks your work in some way
-- please attach your concern to the bug for reconsideration -----
Target Milestone: --- → Future
Updated•23 years ago
|
QA Contact: depstein → dsirnapalli
Comment 3•22 years ago
|
||
*** Bug 235227 has been marked as a duplicate of this bug. ***
reporter: a crash means that the app unexpectedly quit and your os tossed up a dialog saying that the
app crashed. for windows XP it will offer to send a report to microsoft. mozilla will generally toss up its
own talkback dialog. if you don't see such dialogs, then the app did not crash. it was merely fairly
unhappy.
this distinction matters as I am able to use this preference to trigger a range of crashes, however the
simple xbl dialog which you describe is not a crash and was merely something i got on my way to
bigger and better things (crashers).
if you get a crash, please include a talkback incident id (which you can get by running
components\talkback.exe).
if you don't get a crash, please don't say "a crash occurs".
Component: Embedding: APIs → Startup and Profile System
Product: Browser → Firefox
Target Milestone: Future → Phoenix0.1
Version: Trunk → 1.0 Branch
EEK. Safari crossed two bugs. sorry.
Component: Startup and Profile System → Embedding: APIs
Product: Firefox → Browser
Target Milestone: Phoenix0.1 → Future
Version: 1.0 Branch → Trunk
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8a3) Gecko/20040815
Note that on macos(x) this is not a fatal condition, you can continue using mozilla (mostly venkman, as
most other components are fairly hosed) thanks to the global menubar. the description is still accurate,
as the browser won't open.
Hardware: PC → All
Summary: Browser won't open if browser.frames.enabled is set to false → Browser won't open if browser.frames.enabled is set to false - Error launching browser window:no XBL binding for
browser
Summary: Browser won't open if browser.frames.enabled is set to false - Error launching browser window:no XBL binding for
browser → Browser won't open if browser.frames.enabled is set to false - Error launching browser window:no XBL binding for browser
Comment 8•21 years ago
|
||
How can you find out what these error are? What does 'no XBL binding for
browser' mean and why would changing a preference cause this box to appear?
Is the browser capable of doing this - as it could prove extrememly useful for
testing purposes (as currently the only way to see how a page looks without
frames is to use Opera)?
Comment 9•21 years ago
|
||
I have tried to uninstall and reinstall and re-download everything all over
again over the oher program, and nothing works.. it started doing this after I
downloaded a theme... and changed the theme... now it won't open! HELP!
Comment 10•21 years ago
|
||
timeless, you were working on this a couple of weeks ago. Do you want to take
this (or point to where you're working on this?). The actual fix for this
particular problem IIRC was removing several lines of code in
nsCSSFrameConstructor.cpp.
Comment 11•21 years ago
|
||
Comment 12•21 years ago
|
||
Attachment #174965 -
Attachment is obsolete: true
Comment 13•21 years ago
|
||
I fail to see why that preference should control nsXULAtoms::editor and
nsXULAtoms::browser. Enabling them again might be security relevant but I have
no clue about this. At least with the patch seamonkey comes up as usual and
refuses to display frames.
Comment 14•21 years ago
|
||
fixed by the checkin for bug 240129
Comment 15•20 years ago
|
||
*** Bug 289137 has been marked as a duplicate of this bug. ***
Comment 16•20 years ago
|
||
*** Bug 295685 has been marked as a duplicate of this bug. ***
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•