- decouple xul iframes from the browser.frames.enabled preference, so that one can open mozilla if that preference is set to false bug 107911 - avoid mutating style inside frame constructor for noframes bug 240129, this fixes crashes like bug 281333 and  bug 266222 - ConstructFrame does not append children if it fails, thats good enough for tables, so don't care about foreign children if they fail, this prevents tables from going into panic mode. bug 283147 - a display: table-caption behaves like a block for other table frames created below. bug 281527 r/sr= bzbarsky